--- a/layout/services.html
+++ b/layout/services.html
@@ -40,9 +40,9 @@
 	<meta property="twitter:image:src" content="preview image">
 	<!-- Twitter -->
 
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20221211202951">
-	<link rel="stylesheet" href="css/reset.min.css?_v=20221211202951">
-	<link rel="stylesheet" href="css/style.min.css?_v=20221211202951">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20221215144505">
+	<link rel="stylesheet" href="css/reset.min.css?_v=20221215144505">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221215144505">
 
 
 </head>
@@ -163,56 +163,65 @@
 			<div class="page__products products products-offset">
 				<div class="products__container">
 					<div class="products__wrapper">
-						<div class="products__menu products-menu">
-							<a href="" class="products-menu__item">
-								<span class="products-menu__title">
-									Кабельно-<br>проводниковая продукция
-								</span>
-								<span class="products-menu__quantity">
-									(5)
-								</span>
-							</a>
-							<a href="" class="products-menu__item active">
-								<span class="products-menu__title">
-									Кабельно-несущие системы
-								</span>
-								<span class="products-menu__quantity">
-									(24)
-								</span>
-							</a>
-							<a href="" class="products-menu__item">
-								<span class="products-menu__title">
-									Трансформаторы тока
-								</span>
-								<span class="products-menu__quantity">
-									(156)
-								</span>
-							</a>
-							<a href="" class="products-menu__item">
-								<span class="products-menu__title">
-									Муфты, кабельная арматура
-								</span>
-								<span class="products-menu__quantity">
-									(532)
-								</span>
-							</a>
-							<a href="" class="products-menu__item">
-								<span class="products-menu__title">
-									Светотехническая продукция
-								</span>
-								<span class="products-menu__quantity">
-									(5)
-								</span>
-							</a>
-							<a href="" class="products-menu__item">
-								<span class="products-menu__title">
-									Светотехническая продукция
-								</span>
-								<span class="products-menu__quantity">
-									(5)
-								</span>
-							</a>
+						<div class="products__menu" data-da=".main__body, 767.98" data-spollers="767.98, max">
+							<div class="products__menu-title">
+								Категория
+							</div>
+							<button class="products__menu-btn spoller-caption" data-spoller>
+								Трансформаторы тока
+							</button>
+							<div class="products__menu-content products-menu">
+								<a href="" class="products-menu__item">
+									<span class="products-menu__title">
+										Кабельно-<br>проводниковая продукция
+									</span>
+									<span class="products-menu__quantity">
+										(5)
+									</span>
+								</a>
+								<a href="" class="products-menu__item active">
+									<span class="products-menu__title">
+										Кабельно-несущие системы
+									</span>
+									<span class="products-menu__quantity">
+										(24)
+									</span>
+								</a>
+								<a href="" class="products-menu__item">
+									<span class="products-menu__title">
+										Трансформаторы тока
+									</span>
+									<span class="products-menu__quantity">
+										(156)
+									</span>
+								</a>
+								<a href="" class="products-menu__item">
+									<span class="products-menu__title">
+										Муфты, кабельная арматура
+									</span>
+									<span class="products-menu__quantity">
+										(532)
+									</span>
+								</a>
+								<a href="" class="products-menu__item">
+									<span class="products-menu__title">
+										Светотехническая продукция
+									</span>
+									<span class="products-menu__quantity">
+										(5)
+									</span>
+								</a>
+								<a href="" class="products-menu__item">
+									<span class="products-menu__title">
+										Светотехническая продукция
+									</span>
+									<span class="products-menu__quantity">
+										(5)
+									</span>
+								</a>
+							</div>
 						</div>
+
 						<div class="products__body">
 							<form action="#" class="products__search search">
 								<div class="form__wrapper">
@@ -678,16 +687,16 @@
     </div>
 </footer>
 	</div>
-	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20221211202951"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20221211202951"></script>
+	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20221215144505"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20221215144505"></script>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js?_v=20221211202951"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20221211202951"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20221211202951"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollToPlugin.min.js?_v=20221211202951"></script>
-<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20221211202951"></script>
-<script src="https://www.youtube.com/iframe_api?v2.18&_v=20221211202951"></script>
-<script src="js/app.min.js?_v=20221211202951"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js?_v=20221215144505"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20221215144505"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20221215144505"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollToPlugin.min.js?_v=20221215144505"></script>
+<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20221215144505"></script>
+<script src="https://www.youtube.com/iframe_api?v2.18&_v=20221215144505"></script>
+<script src="js/app.min.js?_v=20221215144505"></script>
 
 </body>
 
