--- a/src/site/templates/contacts/contacts.htm
+++ b/src/site/templates/contacts/contacts.htm
@@ -18,8 +18,8 @@
                                 Телефон:
                             </div>
                             <div class="contacts__card-content">
-                                <a href="tel:{{PHONE}}" class="contacts__card-item">{{PHONE}}</a>
-                                <a href="tel:{{PHONECOMMON}}" class="contacts__card-item">{{PHONECOMMON}}</a>
+                                <a href="tel:{{PHONELINK}}" class="contacts__card-item">{{PHONE}}</a>
+                                <a href="tel:{{PHONECOMMONLINK}}" class="contacts__card-item">{{PHONECOMMON}}</a>
                             </div>
                         </div>
                         <div class="contacts__card">
