--- a/src/site/templates/layout/footer.htm
+++ b/src/site/templates/layout/footer.htm
@@ -5,10 +5,10 @@
                 <div class="footer-body__logo">
                     <img src="/img/logo-black.svg" alt="{{ALT}}" title="{{ALT}}">
                 </div>
-                <a href="tel:{{PHONECOMMON}}" class="footer-body__phone">
+                <a href="tel:{{PHONECOMMONLINK}}" class="footer-body__phone">
                     {{PHONECOMMON}}
                 </a>
-                <a href="tel:{{PHONE}}" class="footer-body__phone">
+                <a href="tel:{{PHONELINK}}" class="footer-body__phone">
                     {{PHONE}}
                 </a>
             </div>
