--- a/src/site/templates/layout/header.htm
+++ b/src/site/templates/layout/header.htm
@@ -9,7 +9,7 @@
                     <div class="header-top__contact-title">
                         {{LABELCOMMON}}
                     </div>
-                    <a href="tel:{{PHONECOMMON}}" class="header-top__contact-link">
+                    <a href="tel:{{PHONECOMMONLINK}}" class="header-top__contact-link">
                         {{PHONECOMMON}}
                     </a>
                 </div>
@@ -17,7 +17,7 @@
                     <div class="header-top__contact-title">
                         {{LABEL}}
                     </div>
-                    <a href="tel:{{PHONE}}" class="header-top__contact-link">
+                    <a href="tel:{{PHONELINK}}" class="header-top__contact-link">
                         {{PHONE}}
                     </a>
                 </div>
