--- a/src/site/templates/production/production__goody.htm
+++ b/src/site/templates/production/production__goody.htm
@@ -8,7 +8,7 @@
                                     <div class="main__product-image">
                                         <picture><source srcset="{{PREVIEWFULLWEBP}}" type="image/webp"><img src="{{PREVIEWFULL}}" class="cover-image" alt="{{ALT}}"></picture>
                                     </div>
-                                    <a href="tel:{{PHONE}}" class="main__product-label product-label icon-phone">
+                                    <a href="tel:{{PHONELINK}}" class="main__product-label product-label icon-phone">
                                         <span class="product-label__title">
                                             Консультация по продукции
                                         </span>
@@ -35,9 +35,11 @@
                                 <h3>
                                     Описание
                                 </h3>
-                                <strong class="current-product__gost">
-                                    {{TEXTGOST}}
-                                </strong>
+                                <p>
+                                    <strong class="current-product__gost">
+                                        {{TEXTGOST}}
+                                    </strong>
+                                </p>
                                 {{TEXT}}
                             </div>
                             <div>
