--- a/layout/about.html
+++ b/layout/about.html
@@ -40,9 +40,9 @@
 	<meta property="twitter:image:src" content="preview image">
 	<!-- Twitter -->
 
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20221211202951">
-	<link rel="stylesheet" href="css/reset.min.css?_v=20221211202951">
-	<link rel="stylesheet" href="css/style.min.css?_v=20221211202951">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20221215144505">
+	<link rel="stylesheet" href="css/reset.min.css?_v=20221215144505">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221215144505">
 
 
 </head>
@@ -170,6 +170,24 @@
 									«Компания «ПСК СтройИнвест» предлагает широкий спектр материалов <br>
 									и оборудования для электрических подстанций и сетевого хозяйства любого напряжения.
 								</p>
+								<ul>
+									<li>Lorem ipsum dolor sit amet,
+									</li>
+									<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+									</li>
+									<li>Lorem ipsum dolor?</li>
+								</ul>
+								<ol>
+									<li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda eaque iure
+										ratione iste sequi doloribus? Neque, ipsum. Deserunt, incidunt maxime, ut cum
+										illum eos repellendus nobis molestiae quae commodi laboriosam.</li>
+									<li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda eaque iure
+										ratione iste sequi doloribus? Neque, ipsum. Deserunt, incidunt maxime, ut cum
+										illum eos repellendus nobis molestiae quae commodi laboriosam.</li>
+									<li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda eaque iure
+										ratione iste sequi doloribus? Neque, ipsum. Deserunt, incidunt maxime, ut cum
+										illum eos repellendus nobis molestiae quae commodi laboriosam.</li>
+								</ol>
 								<p>
 									Работая с нашими клиентами, мы уделяем особое внимание построению долгосрочных
 									взаимовыгодных и&nbsp;комфортных взаимоотношений. В компании «ПСК СтройИнвест»
@@ -558,16 +576,16 @@
         </div>
     </div>
 </div>
-	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20221211202951"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20221211202951"></script>
+	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20221215144505"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20221215144505"></script>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js?_v=20221211202951"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20221211202951"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20221211202951"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollToPlugin.min.js?_v=20221211202951"></script>
-<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20221211202951"></script>
-<script src="https://www.youtube.com/iframe_api?v2.18&_v=20221211202951"></script>
-<script src="js/app.min.js?_v=20221211202951"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js?_v=20221215144505"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20221215144505"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20221215144505"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollToPlugin.min.js?_v=20221215144505"></script>
+<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20221215144505"></script>
+<script src="https://www.youtube.com/iframe_api?v2.18&_v=20221215144505"></script>
+<script src="js/app.min.js?_v=20221215144505"></script>
 
 </body>
 
