--- a/layout/about.html
+++ b/layout/about.html
@@ -40,9 +40,9 @@
 	<meta property="twitter:image:src" content="preview image">
 	<!-- Twitter -->
 
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20221215144505">
-	<link rel="stylesheet" href="css/reset.min.css?_v=20221215144505">
-	<link rel="stylesheet" href="css/style.min.css?_v=20221215144505">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20221219214911">
+	<link rel="stylesheet" href="css/reset.min.css?_v=20221219214911">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221219214911">
 
 
 </head>
@@ -387,6 +387,27 @@
 					</div>
 				</div>
 			</section>
+			<section class="page__serts serts">
+				<div class="serts__container">
+					<div class="serts__image">
+						<picture><source srcset="img/serts.webp"type="image/webp"><img src="img/serts.png" alt="serts"></picture>
+					</div>
+					<div class="serts__body">
+						<h2 class="serts__title title-lg">
+							Сертификаты на&nbsp;продукцию
+						</h2>
+						<p class="serts__text">
+							Вся продукция, поставляемая ООО "ПСК СтройИнвест" имеет сертификаты Таможенного Союза, изготовлена в соответствии с ГОСТ и имеет знак EAC.
+						</p>
+						<a href="" class="serts__btn btn btn-orange btn-md">
+							Скачать сертификаты
+						</a>
+					</div>
+					<div class="serts__logo">
+						<img src="img/logo-lg.svg" alt="logo">
+					</div>
+				</div>
+			</section>
 		</main>
 		<footer class="footer">
     <div class="footer__body footer-body">
@@ -576,16 +597,16 @@
         </div>
     </div>
 </div>
-	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20221215144505"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20221215144505"></script>
+	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20221219214911"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20221219214911"></script>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js?_v=20221215144505"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20221215144505"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20221215144505"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollToPlugin.min.js?_v=20221215144505"></script>
-<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20221215144505"></script>
-<script src="https://www.youtube.com/iframe_api?v2.18&_v=20221215144505"></script>
-<script src="js/app.min.js?_v=20221215144505"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js?_v=20221219214911"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20221219214911"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20221219214911"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollToPlugin.min.js?_v=20221219214911"></script>
+<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20221219214911"></script>
+<script src="https://www.youtube.com/iframe_api?v2.18&_v=20221219214911"></script>
+<script src="js/app.min.js?_v=20221219214911"></script>
 
 </body>
 
