--- a/src/site/templates/company/company__stores.htm
+++ b/src/site/templates/company/company__stores.htm
@@ -13,7 +13,7 @@
                 <div class="complex__container">
                     <div data-tabs class="complex__tabs tabs">
                         <div class="tabs__controls" data-spollers="767.98, max">
-                            <div class="tabs__caption" data-spoller></div>
+                            <div class="tabs__caption spoller-caption" data-spoller></div>
                             <div class="tabs__spoller">
                                 <div class="tabs__buttons">
                                     {{NAVIGATION}}
