--- a/src/site/templates/production/production_direction.htm
+++ b/src/site/templates/production/production_direction.htm
@@ -15,14 +15,22 @@
             <div class="page__products products products-offset">
                 <div class="products__container">
                     <div class="products__wrapper">
-                        <div class="products__menu products-menu">
-                            {{INCLUDE:CATEGORIES}}
-                            {{INCLUDE:SUBCATEGORIES}}
+                        <div class="products__menu" id="catalogue" data-da=".main__body, 767.98" data-spollers="767.98, max">
+                            <div class="products__menu-title">
+                                Категория
+                            </div>
+                            <button class="products__menu-btn spoller-caption" data-spoller>
+                                {{MOBILESELECTEDOPTION}}
+                            </button>
+                            <div class="products__menu-content products-menu">
+                                {{INCLUDE:CATEGORIES}}
+                                {{INCLUDE:SUBCATEGORIES}}
+                            </div>
                         </div>
                         <div class="products__body">
-                            <form action="#" class="products__search search">
+                            <form action="{{ACTION}}" class="products__search search">
                                 <div class="form__wrapper">
-                                    <input type="text" name="search" class="form__input search__input" placeholder="Поиск">
+                                    <input type="text" name="search" class="form__input search__input" placeholder="Поиск" value="{{KEYWORD}}">
                                     <button type="button" class="form__input-clear icon-close"></button>
                                 </div>
                                 <button type="submit" class="search__btn btn btn-orange btn-sm icon-search"></button>
@@ -64,6 +72,9 @@
                             </div>
                         </div>
                     </div>
+
+                    <div style="padding-top: 80px;line-height:1.4;">{{TEXTFULL}}</div>
+
                     <div class="products__offers">
                         <h2 class="products__offers-title title-xxl">
                             Другие предложения
