--- a/layout/css/style.css
+++ b/layout/css/style.css
@@ -763,26 +763,18 @@ body._pc .anim-content .products.active .products__item {
 }
 
 .spoller-caption {
+  position: relative;
   font-weight: 500;
   line-height: 1.625;
   background: #ffffff;
-  padding: 1em 1.25em;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  padding: 1em 2.1875em 1em 1.25em;
   color: #060d2c;
 }
 
 .spoller-caption::before {
-  -webkit-box-ordinal-group: 2;
-      -ms-flex-order: 1;
-          order: 1;
+  position: absolute;
+  top: 20px;
+  right: 15px;
   -webkit-transform: rotate(90deg);
       -ms-transform: rotate(90deg);
           transform: rotate(90deg);
@@ -3033,6 +3025,11 @@ body._pc .anim-content .products.active .products__item {
 .products__menu-btn {
   width: 100%;
   margin: 0em 0em 0.6875em 0rem;
+  text-align: left;
+  white-space: nowrap;
+  overflow: hidden;
+  -o-text-overflow: ellipsis;
+     text-overflow: ellipsis;
 }
 
 .products__content {
