--- a/src/site/templates/components/slider/slider-item.htm
+++ b/src/site/templates/components/slider/slider-item.htm
@@ -1,1 +1,12 @@
-<li><div style="background-image: url('{{IMAGE}}');"></div></li>
+<div class="benefits__slide benefits__slide-{{NUM}} swiper-slide">
+                        <div class="benefits__slide-image">
+                            <picture><source srcset="{{IMAGEWEBP}}" type="image/webp"><img src="{{IMAGE}}" class="cover-image benefits__slide-bg" alt=""></picture>
+                        </div>
+                        <div class="benefits__slide-num">
+                            {{TITLE}}
+                        </div>
+                        <div class="benefits__slide-text">
+                            {{TEXT}}
+                        </div>
+                    </div>
+                    
