--- a/src/site/templates/components/slider/slider.htm
+++ b/src/site/templates/components/slider/slider.htm
@@ -1,5 +1,5 @@
-<div id="bl-slider" data-speed="{{SPEED}}">
-                <ul>
+<div class="benefits swiper-container">
+                <div class="benefits__wrapper swiper-wrapper">
                     {{LIST}}
-                </ul>
+                </div>               
             </div>
