--- a/src/site/templates/home.htm
+++ b/src/site/templates/home.htm
@@ -13,48 +13,7 @@
                 <canvas id="gradient-canvas" data-transition-in />
             </section>
             {{DIRECTIONS}}
-            <div class="benefits swiper-container">
-                <div class="benefits__wrapper swiper-wrapper">
-                    <div class="benefits__slide benefits__slide-1 swiper-slide">
-                        <div class="benefits__slide-image">
-                            <picture><source srcset="img/benefits/01.webp"type="image/webp"><img src="img/benefits/01.jpg" class="cover-image benefits__slide-bg" alt="benefits image"></picture>
-                        </div>
-                        <div class="benefits__slide-num">
-                            01
-                        </div>
-                        <div class="benefits__slide-text">
-                            Постоянное развитие умений <br>
-                            и навыков сотрудников
-                        </div>
-                    </div>
-                    <div class="benefits__slide benefits__slide-2 swiper-slide">
-                        <div class="benefits__slide-image">
-                            <picture><source srcset="img/benefits/02.webp"type="image/webp"><img src="img/benefits/02.jpg" class="cover-image benefits__slide-bg" alt="benefits image"></picture>
-                        </div>
-                        <div class="benefits__slide-num">
-                            02
-                        </div>
-                        <div class="benefits__slide-text">
-                            Гарантируем внимание <br>
-                            к партнерам и заботу об их бизнесе
-                        </div>
-                    </div>
-                    <div class="benefits__slide benefits__slide-3 swiper-slide">
-                        <div class="benefits__slide-image">
-                            <picture><source srcset="img/benefits/03.webp"type="image/webp"><img src="img/benefits/03.jpg" class="cover-image benefits__slide-bg" alt="benefits image"></picture>
-                        </div>
-                        <div class="benefits__slide-num">
-                            03
-                        </div>
-                        <div class="benefits__slide-text">
-                            Отвечаем не только за качество <br>
-                            поставляемой и производимой продукции, <br>
-                            но и за уровень обслуживания
-                        </div>
-                    </div>
-                </div>
-               
-            </div>
+            {{SLIDER}}
             {{VIDEO}}
             {{PROJECTS}}
             {{ARTICLES}}
